fixed align  nav css

--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -6,7 +6,7 @@
     align-items: center;
     margin-top: 50px;
     border: 5px black solid;
-    height: 300px;
+    height: 350px;
     margin-left: 75px;
     margin-right: 75px;
     border-radius: 1%;
@@ -36,7 +36,7 @@ input {
 }
 
 button {
-    height: 35px;
+    height: 37px;
     width: 125px;
     background-color: black;
     color: white;
